--- a/src/napari_mito_hcs/config/nuclei.toml
+++ b/src/napari_mito_hcs/config/nuclei.toml
@@ -1,6 +1,6 @@
 intensity_smoothing = 0.5
 threshold = 500
-smallest_hole = 1000
+largest_hole = 1000
 smallest_object = 200
 binary_smoothing = 2
 algorithm = 'nuclei'
